--- a/medp341-midterm/app/dev/australia.html
+++ b/medp341-midterm/app/dev/australia.html
@@ -29,11 +29,12 @@
 
    <script src="https://unpkg.com/ml5@0.1.3/dist/ml5.min.js"></script>
 
-
    <script src="/scripts/flock.js"></script>
    <script src="/scripts/index.js"></script>
+   <script src="/scripts/climateAPI.js"></script>
    
-   <link rel="stylesheet" href="/css/style.css">
+   <link rel="stylesheet" href="css/style.css">
+   <link rel="stylesheet" href="/css/home.css">
 
 </head>
 <body>
@@ -46,8 +47,34 @@
    <h2>AUSTRALIA</h2>
    <div class="flex-container">
       <div class="box-content">
-         <h3>temp animation goes here</h3>
-      </div>
+         <div class="temp-section">
+            <p class="label-temp">Average temperature in Australia</p>
+            <div><a class="api-label" href="https://datahelpdesk.worldbank.org/knowledgebase/articles/902061-climate-data-api">Climate Change API</a></div>
+            <form name="apiForm" id="apiForm">
+               <select class="timeBtn" name="year">
+                  <option value="past1">1920 - 1939</option>
+                  <option value="past2">1940 - 1959</option>
+                  <option value="past3">1960 - 1979</option>
+                  <option value="past4">1980 - 1999</option>
+                  <option value="future1">2020 - 2039</option>
+                  <option value="future2">2040 - 2059</option>
+                  <option value="future3">2060 - 2079</option>
+                  <option value="future4">2080 - 2099</option>
+               </select>
+               <input type="button" value="Go" class="inputBtn" onClick="handleForm()">
+            </form>
+   
+         <div class="temperature-container">
+   
+               <h5 id="title-time-period"></h5>
+               <p id="time-period-info"></p>
+               <div id="time-period-circle" class="">
+                  <p id="time-period-avg" class=""></p>
+               </div>
+               <ul id="temperature-data">
+               </ul>
+            </div>
+         </div>      </div>
       <div class="box-content">
          <h3>Bush Fires</h3>
          <img src="../images/fire.png" class="image-icons" alt="fire" width="200">
@@ -61,7 +88,7 @@
          <p class="explanation">The Great Barrier Reef, larger than the Wall of China and the colorful living thing that can be seen from outer space, is nearly dead. The Reef is being hit by the warmer temperature and by acidification, which occurs when the carbon dioxide dissolves to form carbonic acid. This acidification disrupts the delicate pH that many organisms need to thrive. In the case of the Reef, it causes “coral bleaching,” which may be a straight path to the death of the corals and the marine life that depends on it. </p>
       </div>
       <div class="box-content">
-         <h3>p5 thing goes here</h3>
+         <div id="p5-container"></div>
          <p class="explanation">A rise in sea level and surface temperature will impact how sea turtles reproduce. Because sea turtles remember the place where they hatched, they will often return to that place to do their nesting ritual. However, they might not be able to find this place anymore. Moreover, the sea level rise will inevitably wash away some the turtles’ eggs. In addition, the sex of the embryos is partially determined by the surface temperature. In this case, a warmer environment leads to a higher percentage of females, which will create a significant threat to genetic diversity.</p>
       </div>
    </div>
